Remove ignored files

--- a/Peeragogy-Dashboard-master/task.html
+++ b/Peeragogy-Dashboard-master/task.html
@@ -47,7 +47,8 @@
           <input type="text" class="form-control" placeholder="Search">
         </form>
       </div><!-- /.sidebar-subheader -->
-        <!-- Menu -->
+        
+     <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
           <a href="index.html">
@@ -56,7 +57,7 @@
           </a>
         </li>
         <li class="header"><i class="fa fa-circle-o text-warning"></i> Dashboard</li>
-         <li class="active">
+         <li class="active"> 
           <a href="task.html">
             <i class="icon-target"></i>
            Tasks
@@ -103,9 +104,9 @@
         </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li>
-          <a href="info.html">
+          <a href="faq.html">
             <i class="icon-info"></i>
-          How to stay tuned
+            FAQs
           </a>
           </a>
       </ul><!-- /.sidebar-nav -->
@@ -214,21 +215,22 @@
                       </td>
                     </tr>
                     <tr>
-                      <td>4</td>
-                      <td><span class="label label-danger">G+ Community Engagement</span></td>
+                      <td>5</td>
+                      <h3><td><span class="label label-danger">G+ Community Engagement</span></td></h3>
                       <th></th>
                       <td>
                         <div class="progress">
-                          <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
+                          <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 33%">
                             <span class="sr-only">Progress</span>
                           </td>
                         </tr>
                        </tbody>
                      </table>
-                   </div><!-- /.panel -->
-            </div><!-- /.col -->
-             </div><!-- /.progress-bar -->
-                        </div><!-- /.progress -->
+                   </div>
+                  <!-- /.panel -->
+                 </div><!-- /.col -->
+                </div><!-- /.progress-bar -->
+              </div><!-- /.progress -->
             
      <section class="section-sm">
         <div class="container">
@@ -284,7 +286,7 @@
                   <i class="fa fa-fw fa-gift"></i> Open group<i class="fa fa-check-circle-o text-success pull-right"></i>
                 </div>
                 <div class="meta-row">
-                  <i class="fa fa-fw fa-bell"></i><a href="http://bit.ly/1SVr7XC"target="_blank"> Description </a> <i class="fa fa-check-circle-o text-success pull-right"></i>
+                  <i class="fa fa-fw fa-bell"></i><a href="http://bit.ly/1SVr7XC"target="_blank"> Description </a> <i class="fa fa-check-circle-o text-danger pull-right"></i>
                 </div>
                  <div class="meta-row">
                   <i class="fa fa-fw fa-envelope"></i><a href="mailto:holtzermann17@gmail.com"target="_blank"> Mail</a> <i class="fa fa-check-circle-o text-success pull-right"></i>
@@ -322,13 +324,13 @@
               </div>                
                 </div>
                  <div class="meta-row">
-                  <i class="fa fa-fw fa-thumbs-up"></i> Active <i class="fa fa-check-circle-o text-success pull-right"></i>
+                  <i class="fa fa-fw fa-wheelchair"></i> Evasive <i class="fa fa-check-circle-o text-warning pull-right"></i>
                 </div>
                 <div class="meta-row">
                   <i class="fa fa-fw fa-gift"></i> Open group<i class="fa fa-check-circle-o text-success pull-right"></i>
                 </div>
                 <div class="meta-row">
-                  <i class="fa fa-fw fa-bell"></i><a href="http://bit.ly/1SVr7XC"target="_blank"> Description </a> <i class="fa fa-check-circle-o text-success pull-right"></i>
+                  <i class="fa fa-fw fa-bell"></i><a href="http://bit.ly/1SVr7XC"target="_blank"> Description </a> <i class="fa fa-check-circle-o text-danger pull-right"></i>
                 </div>
                  <div class="meta-row">
                   <i class="fa fa-fw fa-envelope"></i><a href="mailto:fabrizio.terzi@gmail.com"target="_blank"> Mail</a> <i class="fa fa-check-circle-o text-success pull-right"></i>
@@ -364,7 +366,7 @@
               </div>                
                 </div>
                 <div class="meta-row">
-                  <i class="fa fa-fw fa-gears"></i> Active 
+                  <i class="fa fa-fw fa-gears"></i> Ready to go
                 </div>
                 <div class="meta-row">
                   <i class="fa fa-fw fa-fire"></i> Open - Close
