Add wikimania 2015 video presentation on Video Gallery--- Add Event and Set Open Hanghout channel

--- a/Dashboard-V1.1.2/tables.html
+++ b/Dashboard-V1.1.2/tables.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title></title>
   <meta name="author" content="siar" >
   <meta name="description" content="Peeragogy members dashboard">
@@ -47,7 +47,7 @@
           <input type="text" class="form-control" placeholder="Search">
         </form>
       </div><!-- /.sidebar-subheader -->
-      
+
      <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
@@ -146,8 +146,8 @@
           <h2>Scheduling Community Events:</h2>
          <div class="Flexible-container">
           <iframe src="https://www.google.com/calendar/embed?src=gsk5sarlpidfebqdahgs2purro%40group.calendar.google.com&ctz=Europe/Rome" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" ></iframe>
-         </div>   
-        </div>           
+         </div>
+        </div>
        </section>
       <section class="section-sm">
         <div class="container-fluid">
@@ -181,12 +181,12 @@
                       <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
                     </tr>
                     <tr>
-                      <td>Translations Team</td>
-                      <td></td>
-                      <td></td>
+                      <td>Wikimanía México 2015</td>
+                      <td>Event</td>
+                      <td>July 15–19, 2015</td>
                        <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
+                      <td>No</td>
+                      <td><a class="btn btn-info btn-sm" href=" https://plus.google.com/hangouts/_/event/cd2bmj7laemh7i9brbhover75h8?authuser=0&hl=it" target="_blank">Join!</a></td>
                     </tr>
                     <tr>
                       <td>Technology Team</td>
@@ -254,7 +254,7 @@
                     </tr>
                     </tr>
                   </tbody>
-              
+
               </div><!-- /.table-responsive -->
             </div><!-- /.col -->
           </div><!-- /.row -->
@@ -264,7 +264,7 @@
     </table>
     </main><!-- /.page-content -->
    <!--./Calendar-->
-  
+
 
   <!-- last but not least the javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
