add link to wrap index

--- a/Dashboard-V1.1.3/index.html
+++ b/Dashboard-V1.1.3/index.html
@@ -303,7 +303,7 @@
                       <img src="assets/img/6-img-400x400.jpg" alt="img">
                       <div class="overlay-content overlay-animated">
                         <h3> Peeragogy Wrapping !</h3>
-                        <p>Under construction</p>
+                        <p> <a href="http://is.gd/peeragogy_wrap">Our chronicles.</a> </p>
                       </div><!-- /.overlay-content -->
                     </div><!-- /.overlay-container -->
                   </div><!-- /.thumbnail -->
