maybe the email link is better here.

--- a/Dashboard-V1.1.3/index.html
+++ b/Dashboard-V1.1.3/index.html
@@ -303,12 +303,13 @@
                       <img src="assets/img/6-img-400x400.jpg" alt="img">
                       <div class="overlay-content overlay-animated">
                         <h3> Peeragogy Wrapping !</h3>
-                        <p> <a href="http://is.gd/peeragogy_wrap">Our chronicles.</a> </p>
+                        <p> Our chronicles. </p>
                       </div><!-- /.overlay-content -->
                     </div><!-- /.overlay-container -->
                   </div><!-- /.thumbnail -->
                   <h5 class="no-margin"> Monthly Wrap </h5>
-                  <a href="wrap.html"> <small>Timeline wrap</small></a>
+                  <a href="wrap.html"><small>Timeline wrap</small></a>,
+                  <a href="http://is.gd/peeragogy_wrap"><small>Email highlights</small></a>.
                 </div><!-- /.widget -->
               </div><!-- /.col -->
               <div class="col-md-3 isotope-item advisory">
