--- a/Dashboard-V1.1.4/task.html
+++ b/Dashboard-V1.1.4/task.html
@@ -137,7 +137,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <strong><i class="fa fa-fw fa-gears"></i> Most great learning happens in groups. Collaboration is the stuff of growth. ~Sir Ken Robinson</strong>
+              <strong><i class="fa fa-fw fa-gears"></i> “A team is not a group of people that work together. A team is a group of people that trust each other.”  ~Simon Sinek</strong>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
