--- a/Dashboard-V1.1.4/translations.html
+++ b/Dashboard-V1.1.4/translations.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title></title>
   <meta name="author" content="siar" >
   <meta name="description" content="Peeragogy members dashboard">
@@ -47,7 +47,7 @@
           <input type="text" class="form-control" placeholder="Search">
         </form>
       </div><!-- /.sidebar-subheader -->
-        
+
      <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
@@ -132,7 +132,7 @@
           </div><!-- /.row -->
         </div><!-- /.container -->
       </nav><!-- /.navbar.navbar-inverse -->
-      
+
   <!--Topbar-->
       <section class="section-xs bg-white border-default">
         <div class="container-fluid">
@@ -140,16 +140,16 @@
             <div class="col-md-12">
               <ol class="breadcrumb no-margin">
                 <li class="active"><a href="translations.html">Main</a></li>
-                <li><a href="french.html">French</a></li>
-                <li><a href="german.html#link">German</a></li>
-                <li><a href="greek.html#link">Greek</a></li>
-                <li><a href="italian.html#link">Italian</a></li>
-                <li><a href="polish.html#link">Polish</a></li>
-                <li><a href="portuguese.html#link">Portuguese</a></li>
-                <li><a href="russian.html#link">Russian</a></li>
-                <li><a href="spanish.html#link">Spanish</a></li>
-                <li><a href="swedish.html#link">Swedish</a></li>
-                <li><a href="korean.html#link">Korean</a></li>
+                <li><a href="traslations/french.html">French</a></li>
+                <li><a href="traslations/german.html">German</a></li>
+                <li><a href="traslations/greek.html">Greek</a></li>
+                <li><a href="traslations/italian.html">Italian</a></li>
+                <li><a href="traslations/polish.html">Polish</a></li>
+                <li><a href="traslations/portuguese.html">Portuguese</a></li>
+                <li><a href="traslations/russian.html">Russian</a></li>
+                <li><a href="traslations/spanish.html">Spanish</a></li>
+                <li><a href="traslations/swedish.html">Swedish</a></li>
+                <li><a href="traslations/korean.html">Korean</a></li>
               </ol>
             </div><!-- /.col -->  <!--./Topbar-->
           </div><!-- /.row -->
@@ -162,7 +162,7 @@
           <h2></h2>
             <div class="Flexible-container">
             <iframe src='https://client.myapp.com' style='border:0; width: 100%; height: 100%;'></iframe><iframe id="myapp" name="myapp" src="http://peeragogy.github.io/" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
-         </div>              
+         </div>
         </section>
     </main><!-- /.page-content -->
   </div><!-- /.dashboard-wrapper -->
