--- a/Dashboard-V1.1.4/training.html
+++ b/Dashboard-V1.1.4/training.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title></title>
   <meta name="author" content="siar" >
   <meta name="description" content="Peeragogy members dashboard">
@@ -47,17 +47,17 @@
           <input type="text" class="form-control" placeholder="Search">
         </form>
       </div><!-- /.sidebar-subheader -->
-       
+
      <!-- Menu -->
       <ul class="sidebar-nav">
-        <li class="active">
+        <li>
           <a href="index.html">
             <i class="icon-home"></i>
             Home
           </a>
         </li>
         <li class="header"><i class="fa fa-circle-o text-warning"></i> Dashboard</li>
-         <li>
+         <li class="active">
           <a href="task.html">
             <i class="icon-target"></i>
            Tasks
@@ -112,8 +112,6 @@
       </ul><!-- /.sidebar-nav -->
     </aside><!-- /.sidebar -->
     <!--/. Menu -->
-    </aside><!-- /.sidebar -->
-
     <!-- Page content -->
     <main class="page-content">
       <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -123,9 +121,9 @@
               <button type="button" class="btn navbar-btn btn-link pull-left" data-toggle="sidebar-primary"><i class="fa fa-fw text-white fa-align-justify"></i></button>
             </div><!-- /.col -->
             <div class="col-xs-6 text-center">
-              <a class="navbar-brand" href="tables.html#link">
+              <a class="navbar-brand" href="training.html#link">
                 <!-- <img class="brand-logo" alt="Logo" src="assets/img/logo-white.png"> -->
-                <span class="brand-name">Handbook Translations</span>
+                <span class="brand-name">Training Activity</span>
               </a>
             </div><!-- /.col -->
             <div class="col-xs-3">
@@ -133,44 +131,80 @@
           </div><!-- /.row -->
         </div><!-- /.container -->
       </nav><!-- /.navbar.navbar-inverse -->
-      
-  <!--Topbar-->
-      <section class="section-xs bg-white border-default">
-        <div class="container-fluid">
+     <main><!-- /.page-content -->
+      <!-- ============================= -->
+     <section class="section-xs bg-warning">
+        <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <ol class="breadcrumb no-margin">
-                <li class="active"><a href="translations.html">Main</a></li>
-                <li><a href="french.html">French</a></li>
-                <li><a href="german.html#link">German</a></li>
-                <li><a href="greek.html#link">Greek</a></li>
-                <li><a href="italian.html#link">Italian</a></li>
-                <li><a href="polish.html#link">Polish</a></li>
-                <li><a href="portuguese.html#link">Portuguese</a></li>
-                <li><a href="russian.html#link">Russian</a></li>
-                <li><a href="spanish.html#link">Spanish</a></li>
-                <li><a href="swedish.html#link">Swedish</a></li>
-                <li><a href="korean.html#link">Korean</a></li>
-              </ol>
-            </div><!-- /.col -->  <!--./Topbar-->
+              <strong><i class="fa fa-fw fa-gears"></i> “A team is not a group of people that work together. A team is a group of people that trust each other.”  ~Simon Sinek</strong>
+            </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
       </section>
 
-  <!-- Responsive iFrame for Peeragogy Map-->
-      <section class="section-sm">
+     <section class="section-sm">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h2 class="headline">Classes</h2>
+              <ul id="filters" class="tags">
+                <li class="active"><a href="" data-filter="*">Show all </a></li>
+                <li><a href="training.html" data-filter=".code">Code training</a></li>
+                <li><a href="training.html" data-filter=".you">Your expertize</a></li>
+              </ul><!-- /#filters.tags -->
+            </div><!-- /.col -->
+          </div><!-- /.row -->
+          <br>
+       </section>
+<!-- ---------------------/.1 -->
+ <section class="section">
         <div class="container-fluid">
-          <h2></h2>
-            <div class="Flexible-container">
-            <iframe src='https://client.myapp.com' style='border:0; width: 100%; height: 100%;'></iframe><iframe id="myapp" name="myapp" src="http://www.systranet.com/turl/?systrangui=http://www.systran.it%3B/snetcom/web&systranbanner=1&systranuid=aHR0cC1wZWVyYWdvZ3kuZ2l0aHViLmlvLy9lbl9lcw==" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
-         </div>              
-        </section>
-    </main><!-- /.page-content -->
+          <div class="row">
+           <div class="isotope-container">
+            <div class="col-md-4 code">
+              <div class="panel panel-secondary">
+                <div class="panel-body bg-secondary-light no-padding">
+                  <div class="meta-cell bg-info no-border">
+                    <img class="drop-in-left img-thumbnail" src="assets/img/classes/class-1.jpg" alt="git" width="75" height="75">
+                    <strong>Git school of coding</strong>
+                    <p class="no-margin"><i class="fa fa-github"></i> Distributed revision control system [Repository}</p>
+                  </div>
+                </div>
+                <div class="panel-body">
+                  <p><strong>Description:</strong> We love helping people just like you use GitHub and Git to collaborate and be more productive. No matter your level of experience, we’ve got something just for you.﻿</p>
+                </div>
+                <div class="meta-cell text-center bg-secondary-light">
+                  <i class="fa-fw fa-gears"></i> <a href="training/git/1-git.html"><span class="text-white">Join the training!</span></a>
+                </div>
+              </div><!-- /.panel -->
+            </div><!-- /.col -->
+    <!-- ---------------------/.1 -->
+    <!-- ---------------------/2 -->
+            <div class="col-md-4 you">
+              <div class="panel panel-secondary">
+                <div class="panel-body bg-secondary-light no-padding">
+                  <div class="meta-cell bg-danger no-boarder">
+                    <img class="drop-in-left img-thumbnail" src="assets/img/classes/class-2.jpg" alt="git" width="75" height="75">
+                    <strong>Share your Learning</strong>
+                    <p class="no-margin"><i class="fa fa-gears"></i> add your expertise</p>
+                  </div>
+                </div>
+                <div class="panel-body">
+                  <p><strong>Description:</strong> All the great organizations in the world, all have a sense of why that organization does what it does. We are trying to define  our peeragogy sense. Do you want to join us? ﻿</p>
+                </div>
+                <div class="meta-cell text-center bg-secondary-light">
+                  <i class="fa-fw fa-gears"></i> <a href="1-git.html"><span class="text-white">Join the training!</span></a>
+                </div>
+              </div><!-- /.panel -->
+            </div><!-- /.col -->
+          </section>
+<!-- ---------------------/.2 -->
   </div><!-- /.dashboard-wrapper -->
 
   <!-- last but not least the javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="assets/js/jQuery 1.11.3.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="http://graphikaria.com/demo/theorem/v2.0.0/assets/js/jquery-1.11.1.min.js"><\/script>')</script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
   <!-- Plugins -->
