--- a/Dashboard-V1.1.4/traslations/italian.html
+++ b/Dashboard-V1.1.4/traslations/italian.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title></title>
   <meta name="author" content="siar" >
   <meta name="description" content="Peeragogy members dashboard">
@@ -32,87 +32,93 @@
   <div class="dashboard-wrapper">
     <aside class="dashboard-sidebar sidebar-primary">
       <div class="sidebar-header text-center">
-        <a class="navbar-brand" href="index.html#link">
-          <img class="brand-logo" alt="Logo" src="./assets/img/logo-white.png">
+        <a class="navbar-brand" href="../index.html#link">
+          <img class="brand-logo" alt="Logo" src="../assets/img/logo-white.png">
           <span class="brand-name">Peeragogues</span>
         </a><!-- /.navbar-brand -->
       </div><!-- /.sidebar-header -->
       <div class="sidebar-subheader text-center">
-        <img class="img-circle" src="./assets/img/user-group.jpg" width="100" height="100" alt="img">
+        <img class="img-circle" src="../assets/img/user-group.jpg" width="100" height="100" alt="img">
         <p class="no-margin"><strong>Peeragogy Project</strong></p>
         <p><small><i class="fa fa-globe"></i> Learning with peers</small></p>
-        <p><a href="index.html#link" class="btn btn-outline btn-primary">Contact us!</a></p>
+        <p><a href="../index.html#link" class="btn btn-outline btn-primary">Contact us!</a></p>
       </div><!-- /.sidebar-subheader -->
       <div class="sidebar-subheader">
         <form role="search">
           <input type="text" class="form-control" placeholder="Search">
         </form>
       </div><!-- /.sidebar-subheader -->
-       <!-- Menu -->
-      <ul class="sidebar-nav">
+
+     <!-- Menu -->
+        <ul class="sidebar-nav">
         <li class="active">
-          <a href="index.html">
+          <a href="../index.html">
             <i class="icon-home"></i>
             Home
           </a>
         </li>
         <li class="header"><i class="fa fa-circle-o text-warning"></i> Dashboard</li>
          <li>
-          <a href="task.html">
+          <a href="../task.html">
             <i class="icon-target"></i>
            Tasks
           </a>
         </li>
          <li>
            <li>
-          <a href="tables.html">
+          <a href="../tables.html">
             <i class="icon-pin"></i>
             Events
           </a>
         </li>
+        <li>
+          <a href="../training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
          <li>
-          <a href="gallery.html">
+          <a href="../gallery.html">
             <i class="icon-camcorder"></i>
             Hangouts
           </a>
         </li>
          <li>
            <li>
-          <a href="location.html">
+          <a href="../location.html">
             <i class="icon-map"></i>
             Members Map
           </a>
         </li>
           <li class="header"><i class="fa fa-circle-o text-success"></i> Library</li>
            <li>
-          <a href="library.html">
+          <a href="../library.html">
             <i class=" icon-folder"></i>
             Bookcase
           </a>
            <li>
-          <a href="translations.html">
+          <a href="../translations.html">
             <i class=" icon-grid"></i>
             Translations
           </a>
         </li>
         </li>
          <li>
-          <a href="flip.html">
+          <a href="../flip.html">
             <i class=" icon-eye"></i>
             Flip Handbook
           </a>
         </li>
          <li class="header"><i class="fa fa-circle-o text-info"></i> Info</li>
          <li>
-          <a href="info.html">
+          <a href="../faq.html">
             <i class="icon-info"></i>
-          How to stay tuned
+            FAQs
           </a>
           </a>
       </ul><!-- /.sidebar-nav -->
     </aside><!-- /.sidebar -->
     <!--/. Menu -->
-    </aside><!-- /.sidebar -->
 
     <!-- Page content -->
     <main class="page-content">
@@ -123,8 +129,8 @@
               <button type="button" class="btn navbar-btn btn-link pull-left" data-toggle="sidebar-primary"><i class="fa fa-fw text-white fa-align-justify"></i></button>
             </div><!-- /.col -->
             <div class="col-xs-6 text-center">
-              <a class="navbar-brand" href="tables.html#link">
-                <!-- <img class="brand-logo" alt="Logo" src="assets/img/logo-white.png"> -->
+              <a class="navbar-brand" href="../tables.html#link">
+                <!-- <img class="brand-logo" alt="Logo" src="../assets/img/logo-white.png"> -->
                 <span class="brand-name">Handbook Translations</span>
               </a>
             </div><!-- /.col -->
@@ -133,14 +139,14 @@
           </div><!-- /.row -->
         </div><!-- /.container -->
       </nav><!-- /.navbar.navbar-inverse -->
-      
+
   <!--Topbar-->
       <section class="section-xs bg-white border-default">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12">
               <ol class="breadcrumb no-margin">
-                <li class="active"><a href="translations.html">Main</a></li>
+                <li class="active"><a href="../translations.html">Main</a></li>
                 <li><a href="french.html">French</a></li>
                 <li><a href="german.html#link">German</a></li>
                 <li><a href="greek.html#link">Greek</a></li>
@@ -161,14 +167,17 @@
         <div class="container-fluid">
           <h2></h2>
             <div class="Flexible-container">
-            <iframe src='https://client.myapp.com' style='border:0; width: 100%; height: 100%;'></iframe><iframe id="myapp" name="myapp" src="http://www.systranet.com/turl/?systrangui=http://www.systran.it%3B/snetcom/web&systranbanner=1&systranuid=aHR0cC1wZWVyYWdvZ3kuZ2l0aHViLmlvLy9lbl9mcg==" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
-         </div>              
+            <iframe src='https://client.myapp.com' style='border:0; width: 100%; height: 100%;'></iframe><iframe id="myapp" name="myapp" src="http://www.systranet.com/turl/?systrangui=http://www.systran.it%3B/snetcom/web&systranbanner=1&systranuid=aHR0cC1wZWVyYWdvZ3kuZ2l0aHViLmlvLy9lbl9pdA==" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+         </div>
         </section>
     </main><!-- /.page-content -->
   </div><!-- /.dashboard-wrapper -->
+
+
+
   <!-- last but not least the javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../assets/js/jQuery 1.11.3.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="../assets/js/jQuery 1.11.3.js"><\/script>')</script>
   <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 
   <!-- Plugins -->
