Fix training manu link

--- a/Dashboard-V1.1.4/training.html
+++ b/Dashboard-V1.1.4/training.html
@@ -50,14 +50,14 @@
 
      <!-- Menu -->
       <ul class="sidebar-nav">
-        <li>
+        <li class="active">
           <a href="index.html">
             <i class="icon-home"></i>
             Home
           </a>
         </li>
         <li class="header"><i class="fa fa-circle-o text-warning"></i> Dashboard</li>
-         <li class="active">
+         <li>
           <a href="task.html">
             <i class="icon-target"></i>
            Tasks
@@ -70,6 +70,12 @@
             Events
           </a>
         </li>
+        <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
          <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
@@ -137,7 +143,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <strong><i class="fa fa-fw fa-gears"></i> “A team is not a group of people that work together. A team is a group of people that trust each other.”  ~Simon Sinek</strong>
+              <strong><i class="fa fa-fw fa-gears"></i> Most great learning happens in groups. Collaboration is the stuff of growth. ~Sir Ken Robinson</strong>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
@@ -194,7 +200,7 @@
                   <p><strong>Description:</strong> All the great organizations in the world, all have a sense of why that organization does what it does. We are trying to define  our peeragogy sense. Do you want to join us? ﻿</p>
                 </div>
                 <div class="meta-cell text-center bg-secondary-light">
-                  <i class="fa-fw fa-gears"></i> <a href="1-git.html"><span class="text-white">Join the training!</span></a>
+                  <i class="fa-fw fa-gears"></i> <a href="1-git.html"><span class="text-white">Create your training!</span></a>
                 </div>
               </div><!-- /.panel -->
             </div><!-- /.col -->
