--- a/Dashboard-V1.1.4/location.html
+++ b/Dashboard-V1.1.4/location.html
@@ -144,7 +144,7 @@
         <div class="container-fluid">
           <h2>Peeragogues Map</h2>
            <div class="Flexible-container">
-           <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/embed?mid=zs8z5LUDvpaY.knMlXinabpbs"></iframe>
+           <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/edit?mid=zsYU-WSUn60A.k4i-j_I9pGYg"></iframe>
          </div>              
         </section>
        </div><!-- /.dashboard-wrapper -->
