fix training manu sidebar links

--- a/Dashboard-V1.1.4/app.html
+++ b/Dashboard-V1.1.4/app.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title></title>
   <meta name="author" content="siar" >
   <meta name="description" content="Peeragogy members dashboard">
@@ -71,6 +71,13 @@
           </a>
         </li>
          <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
+         <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
             Hangouts
@@ -135,7 +142,7 @@
       <section class="section-sm">
         <div class="container-fluid">
          <div id="edshelf-widget-shelf-36687"></div><script src="https://edshelf.com/widgets/shelf/?id=36687&height=550&format=grid&type=shelf"></script>
-          </div>              
+          </div>
          </section>
 <!-- begin MAIN PAGE CONTENT -->
     </main><!-- /.page-content -->
