--- a/Dashboard-V1.1.4/gallery.html
+++ b/Dashboard-V1.1.4/gallery.html
@@ -70,6 +70,13 @@
             Events
           </a>
         </li>
+         <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
          <li class="active">
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
