--- a/Dashboard-V1.1.4/library.html
+++ b/Dashboard-V1.1.4/library.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title></title>
   <meta name="author" content="siar" >
   <meta name="description" content="Peeragogy members dashboard">
@@ -48,7 +48,7 @@
           <input type="text" class="form-control" placeholder="Search">
         </form>
        </div><!-- /.sidebar-subheader -->
-       
+
      <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
@@ -71,6 +71,13 @@
             Events
           </a>
         </li>
+         <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
          <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
@@ -115,7 +122,7 @@
     <!--/. Menu -->
     <!-- Page content -->
    <!-- Message -->
-   
+
     <!-- Page content -->
     <main class="page-content">
       <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -148,7 +155,7 @@
         <div class="container-fluid">
             <div class="Flexible-container">
 <iframe width="400px" height="250px" src='http://fliphtml5.com/bookcase/ieph'  seamless='seamless' scrolling='true' frameborder='0' allowtransparency='true' allowfullscreen ></iframe>
-          </div>              
+          </div>
          </section>
  <!-- ============================================================= -->
     </main><!-- /.page-content -->
