--- a/Dashboard-V1.1.4/location.html
+++ b/Dashboard-V1.1.4/location.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title></title>
   <meta name="author" content="siar" >
   <meta name="description" content="Peeragogy members dashboard">
@@ -48,7 +48,7 @@
           <input type="text" class="form-control" placeholder="Search">
         </form>
         </div><!-- /.sidebar-subheader -->
-      
+
      <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
@@ -71,6 +71,13 @@
             Events
           </a>
         </li>
+         <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
          <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
@@ -138,14 +145,14 @@
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
-      </section>     
+      </section>
   <!-- Responsive iFrame for Peeragogy Map-->
       <section class="section-sm">
         <div class="container-fluid">
           <h2>Peeragogues Map</h2>
            <div class="Flexible-container">
            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/edit?mid=zsYU-WSUn60A.k4i-j_I9pGYg"></iframe>
-         </div>              
+         </div>
         </section>
        </div><!-- /.dashboard-wrapper -->
     </main><!-- /.page-content -->
