--- a/Dashboard-V1.1.4/wrap.html
+++ b/Dashboard-V1.1.4/wrap.html
@@ -65,6 +65,13 @@
           </a>
         </li>
          <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
+         <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
             Hangouts
