--- a/Dashboard-V1.1.4/flip.html
+++ b/Dashboard-V1.1.4/flip.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title></title>
   <meta name="author" content="siar" >
   <meta name="description" content="Peeragogy members dashboard">
@@ -48,7 +48,7 @@
           <input type="text" class="form-control" placeholder="Search">
         </form>
         </div><!-- /.sidebar-subheader -->
-       
+
      <!-- Menu -->
       <ul class="sidebar-nav">
         <li>
@@ -71,6 +71,13 @@
             Events
           </a>
         </li>
+         <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
          <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
@@ -147,7 +154,7 @@
         <div class="container-fluid">
             <div class="Flexible-container">
 <iframe width="700px" height="425px" src="http://online.fliphtml5.com/xrvq/zwwh/#p=1" frameborder="0"></iframe>
-          </div>              
+          </div>
          </section>
 
     </main><!-- /.page-content -->
