--- a/Dashboard-V1.1.4/info.html
+++ b/Dashboard-V1.1.4/info.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <title></title>
   <meta name="author" content="siar" >
   <meta name="description" content="Peeragogy members dashboard">
@@ -70,6 +70,13 @@
           </a>
         </li>
          <li>
+          <a href="training.html">
+            <i class=" icon-fire"></i>
+            Training
+          </a>
+           <li>
+         <li>
+         <li>
           <a href="gallery.html">
             <i class="icon-camcorder"></i>
             Hangouts
@@ -125,11 +132,11 @@
                 <span class="brand-name">Read me</span>
               </a>
             </div><!-- /.col -->
-           
+
           </div><!-- /.row -->
         </div><!-- /.container -->
       </nav><!-- /.navbar.navbar-inverse -->
-  <!-- ============================================================= -->  
+  <!-- ============================================================= -->
   <section class="section-xs bg-info">
         <div class="container">
           <div class="col-xs-12 text-center">
@@ -147,14 +154,14 @@
             <div class="text-justify">
            <p class='bs-example'>
             This Dashboard has been designed to be remotely easily managed by a group of co-learner through a public repository on GitHub.
-            We intend to use <a href="https://git-scm.com/"target="_blank">Git</a> as distributed a free and open source  control system designed to handle everything from small community task to very large projects with speed and efficiency. 
+            We intend to use <a href="https://git-scm.com/"target="_blank">Git</a> as distributed a free and open source  control system designed to handle everything from small community task to very large projects with speed and efficiency.
             If you currently do not know how to use Git (but we hope you can learn with us soon) the easiest way to have the latest version of the dashboard is directly download the .zip file on your device and open the page index.html in your browser.
         <div class="bs-callout bs-callout-default">
        <h4>Download last Dashboard Zip folder on GitHub</h4>
       <a href="https://github.com/Peeragogy/Peeragogy-Dashboard"target="_blank">Download page</a>
      </div>
       The easiest way to get started would be to join one of our weekly hangouts. And for a quick view of the project's current priorities, please read the
-      <a href="http://peeragogy.github.io/distributed_roadmap.html"target="_blank">Distributed Roadmap</a> page in the Peeragogy Handbook. Don't feel that you've got to read the whole handbook before jumping in. But, if you find a part you think you can improve, that's awesome.        
+      <a href="http://peeragogy.github.io/distributed_roadmap.html"target="_blank">Distributed Roadmap</a> page in the Peeragogy Handbook. Don't feel that you've got to read the whole handbook before jumping in. But, if you find a part you think you can improve, that's awesome.
     </p>
     </div>
    </section><!-- /#introduction --
@@ -167,7 +174,7 @@
            <p class='bs-example'>
             If you want to hack and learning by doing <strong>Git </strong> and work directly from the Git command prompt.
             </p>
-            <div class="scrollblock block-setup">       
+            <div class="scrollblock block-setup">
         <p><a href="http://code.google.com/p/git-osx-installer/downloads/list?can=3">Download git for OSX</a></p>
         <p><a href="http://msysgit.github.io/">Download git for Windows</a></p>
         <p><a href="http://git-scm.com/book/en/Getting-Started-Installing-Git">Download git for Linux</a> </p>
@@ -191,23 +198,23 @@
            <h3 class='page-header'>Developer:</h3>
             <div class="text-justify">
           The main difficulty with describing how to contribute to a project is that there are a huge number of variations on how it’s done.
-          Because Git is very flexible, people can and do work together in many ways, and it’s problematic to describe how you should contribute 
+          Because Git is very flexible, people can and do work together in many ways, and it’s problematic to describe how you should contribute
           – every project is a bit different. Some of the variables involved are active contributor count, chosen workflow, your commit access, and possibly the external contribution method.
          <br>
-          The first variable is active contributor count – how many users will actively contributing code to this project, and how often? 
-          In many instances, we’ll have only one developers with a few commits a day, or possibly less. 
-          This is important because with more and more developers, we'll run into more issues with making sure the code applies cleanly and  easily merged. 
+          The first variable is active contributor count – how many users will actively contributing code to this project, and how often?
+          In many instances, we’ll have only one developers with a few commits a day, or possibly less.
+          This is important because with more and more developers, we'll run into more issues with making sure the code applies cleanly and  easily merged.
           Changes you submit may be rendered obsolete or severely broken by work that is merged in while you were working or while your changes were waiting to be approved or applied.
           How can we keep our code consistently up to date and your commits valid?
          <br>
-          The next issue is your commit access. The workflow required in order to contribute to a project is much different if you have write access to the project than if you don’t. 
+          The next issue is your commit access. The workflow required in order to contribute to a project is much different if you have write access to the project than if you don’t.
           If you don’t have write access, how does the project prefer to accept contributed work? Does it even have a policy?
           How much work are you contributing at a time? How often do you contribute?
          <br>
           All these questions can affect how you contribute effectively to a project and what workflows are preferred or available to you.
           We’ll cover aspects of each of these in a series of use cases, moving from simple to more complex; you should be able to construct the specific workflows you need in practice from these examples.
        </p>
-       <p><strong>Welcome aboard!!</strong></p> 
+       <p><strong>Welcome aboard!!</strong></p>
   </div>
   </section>
   </section><!-- /#The Solution -->
@@ -224,7 +231,7 @@
         </audio>
        <!--./AudioFoot-->
          </footer>
-  
+
   <!-- last but not least the javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/jQuery 1.11.3.js"><\/script>')</script>
