Add App class,MOOC

--- a/Dashboard-V1.1.4/index.html
+++ b/Dashboard-V1.1.4/index.html
@@ -40,7 +40,7 @@
         <img class="img-circle" src="assets/img/user-group.jpg" width="100" height="100" alt="img">
         <p class="no-margin"><strong>Peeragogy Project</strong></p>
         <p><small><i class="fa fa-globe"></i> Learning with peers</small></p>
-        <p><a href="mailto:https://groups.google.com/forum/#!forum/peeragogy" class="btn btn-outline btn-primary">Contact us!</a></p>
+        <p><a href="mailto:peeragogy@googlegroups.com" class="btn btn-outline btn-primary">Contact us!</a></p>
       </div><!-- /.sidebar-subheader -->
       <div class="sidebar-subheader">
       </div><!-- /.sidebar-subheader -->
@@ -377,6 +377,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/jQuery 1.11.3.js"><\/script>')</script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64479538-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   <!-- Plugins -->
   <script src="assets/prism/prism.js"></script>
