--- a/Dashboard-V1.1.4/tables.html
+++ b/Dashboard-V1.1.4/tables.html
@@ -180,20 +180,12 @@
                       <td><a class="btn btn-info btn-sm" href="https://plus.google.com/+PeeragogyOrgHandbook/posts" target="_blank">Join!</a></td>
                     </tr>
                      <tr>
-                      <td>Welcoming Day</td>
-                      <td></td>
-                      <td></td>
-                       <td></td>
-                      <td></td>
-                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
-                    </tr>
-                    <tr>
-                      <td>Wikimanía México 2015</td>
-                      <td>Event</td>
-                      <td>July 15–19, 2015</td>
-                       <td></td>
+                      <td>MIT App Inventor Peeragogy</td>
+                      <td>MOOc Edx</td>
+                      <td>Starts October 19, 2015 </td>
+                       <td><a href="https://www.edx.org/course/mobile-computing-app-inventor-cs-trinityx-t002x">Enroll now</a></td></td>
                       <td>No</td>
-                      <td><a class="btn btn-info btn-sm" href=" https://plus.google.com/hangouts/_/event/cd2bmj7laemh7i9brbhover75h8?authuser=0&hl=it" target="_blank">Join!</a></td>
+                      <td><a class="btn btn-info btn-sm" href="tables.html#"></a></td>
                     </tr>
                     <tr>
                       <td>Technology Team</td>
@@ -277,6 +269,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/jQuery 1.11.3.js"><\/script>')</script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64479538-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   <!-- Plugins -->
   <script src="assets/prism/prism.js"></script>
