--- a/Dashboard-V1.1.4/training.html
+++ b/Dashboard-V1.1.4/training.html
@@ -186,6 +186,24 @@
               </div><!-- /.panel -->
             </div><!-- /.col -->
     <!-- ---------------------/.1 -->
+       <div class="col-md-4 code">
+              <div class="panel panel-secondary">
+                <div class="panel-body bg-secondary-light no-padding">
+                  <div class="meta-cell bg-success no-boarder">
+                    <img class="drop-in-left img-thumbnail" src="assets/img/classes/class-3.jpg" alt="git" width="75" height="75">
+                    <strong>Peeragogy App</strong>
+                    <p class="no-margin"><i class="fa fa-gears"></i> MIT Inventor</p>
+                  </div>
+                </div>
+                <div class="panel-body">
+                  <p><strong>Description:</strong> MIT App Inventor is a blocks-based programming tool that allows everyone, even novices, to start programming and build fully functional apps for Android devices.﻿</p>
+                </div>
+                <div class="meta-cell text-center bg-secondary-light">
+                  <i class="fa-fw fa-gears"></i> <a href="training/MIT-Apps/1-MIT.html"><span class="text-white">Join the Task!</span></a>
+                </div>
+              </div><!-- /.panel -->
+            </div><!-- /.col -->
+
     <!-- ---------------------/2 -->
             <div class="col-md-4 you">
               <div class="panel panel-secondary">
@@ -212,6 +230,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="http://graphikaria.com/demo/theorem/v2.0.0/assets/js/jquery-1.11.1.min.js"><\/script>')</script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64479538-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   <!-- Plugins -->
   <script src="assets/prism/prism.js"></script>
