--- a/Dashboard-V1.1.4/training/MIT-Apps/1-MIT.html
+++ b/Dashboard-V1.1.4/training/MIT-Apps/1-MIT.html
@@ -125,7 +125,7 @@
             <div class="col-xs-6 text-center">
               <a class="navbar-brand" href="gallery.html#link">
                 <!-- <img class="brand-logo" alt="Logo" src="assets/img/logo-white.png"> -->
-                <span class="brand-name">Learning Git</span>
+                <span class="brand-name">Learning MIT App Inventor</span>
               </a>
           </div><!-- /.row -->
         </div><!-- /.container -->
@@ -141,45 +141,65 @@
         </div><!-- /.container -->
       </section>
       <!-- ============================================================= -->
-      <section class="section-sm">
-        <div class="container">
-          <div class="row">
-           <div class="col-md-12">
-              <h3 class="headline"> Try Git right in your web browser.</h3>
-            </div>
-          </div>
-          <br>
-          <div class="video-container-iframe">
-          <iframe src="https://try.github.io/levels/1/challenges/1" style="border:0px #000000 solid;" name="Git" scrolling="no" align="center" height="1200" width="100%"></iframe>
-          </div>
-          <br>
+ <section class="section-sm">
+        <div class="container-fluid">
+         <div class="table-responsive">
+           <h3 class='page-header'>MIT App Inventor Peeragogy Class:</h3>
+            <div class="text-justify">
+           <p class='bs-example'>
+           App Inventor is a cloud-based tool, which means that we can build our <strong>"My Peeragogy App" </strong> right in web browser.
+        <div class="bs-callout bs-callout-default">
+       <h4>Getting Started with MIT App Inventor 2 </h4>
+      <a href="http://appinventor.mit.edu/explore/get-started"target="_blank">MIT page</a>
+     </div>
+       Learn to use the open development tool, App Inventor, to program on Android devices. You will learn how to design and build mobile apps -- apps that are aware of their location, send and receive text messages, and give advice and directions. The only limit on the types of apps you will learn to build is your own imagination!
+       However, computer science is not just about coding and building apps. We will also learn some of  the fundamental principles of computer science. We'll learn about the potential and the limitations of computing and coding. We'll learn how the Internet works and about the positive and negative aspects of computing in today's society, and much more!
+       In addition to programming and CSP the course is project-based and emphasizes writing, communication, and creativity. Multiple-choice questions, in the style that students can expect to encounter on the AP exam, will also be a key component of this course.
+    </p>
+    </div>
+
        <!-- ============================================================= -->
      <section class="section-xs bg-warning">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <strong><i class="fa fa-fw fa-smile-o"></i> Have a nice learning</strong>
+              <strong><i class="fa fa-fw fa-smile-o"></i> Join the class</strong>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container -->
       </section>
- <!-- - Training--============================================================= -->
-      <section class="section-sm">
-          <div class="video-container-iframe">
-          <iframe src="https://training.github.com/kit/" style="border:0px #000000 solid;" name="Git" scrolling="auto" align="center" height="1200" width="100%"></iframe>
-            </div>
-            </div><!-- /.dashboard-wrapper -->
- <!-- ============================================================= -->
+ <section class="section-sm">
+  <div class="text-justify">
+           <p class='bs-example'>
+We are setting the learning enviroment. Do you like to help us?
+ </div>
+ </section>
+<section class="section-sm">
+        <div class="container-fluid">
+            <div class="Flexible-container">
+<iframe width="400px" height="http://polr.me/2n5"  seamless='seamless' scrolling='true' frameborder='0' allowtransparency='true' allowfullscreen ></iframe>
+          </div>
+         </section>
 
 
     </main><!-- /.page-content -->
 
-
+  </div><!-- /.dashboard-wrapper -->
 
   <!-- last but not least the javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/jQuery 1.11.3.js"><\/script>')</script>
   <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
+   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64479538-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   <!-- Plugins -->
   <script src="../../assets/prism/prism.js"></script>
