--- a/Dashboard-V1.1.4/location.html
+++ b/Dashboard-V1.1.4/location.html
@@ -150,8 +150,8 @@
       <section class="section-sm">
         <div class="container-fluid">
           <h2>Peeragogues Map</h2>
-           <div class="Flexible-container">
-           <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/edit?mid=zsYU-WSUn60A.k4i-j_I9pGYg"></iframe>
+          <div class="video-container-iframe">
+           <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"  src="https://www.google.com/maps/d/embed?mid=zsYU-WSUn60A.k8pDpTg3k4lI" width="100%" height="600"></iframe>
          </div>
         </section>
        </div><!-- /.dashboard-wrapper -->
@@ -160,6 +160,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/jQuery 1.11.3.js"><\/script>')</script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64479538-1', 'auto');
+  ga('send', 'pageview');
+</script>
 
   <!-- Plugins -->
   <script src="assets/prism/prism.js"></script>
