--- a/Dashboard-V1.1.4/task.html
+++ b/Dashboard-V1.1.4/task.html
@@ -178,7 +178,7 @@
                       <th><a href="https://goo.gl/fSh2n9"target="_blank">Amanda Lyons</a></th>
                       <td>
                         <div class="progress no-margin">
-                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 15%">
+                          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
                             <span class="sr-only">Progress</span>
                           </div><!-- /.progress-bar -->
                         </div><!-- /.progress -->
@@ -198,11 +198,11 @@
                     </tr>
                     <tr>
                       <td>3</td>
-                      <td>Dashboard developer</td>
+                      <td>Dashboard Development</td>
                       <th><a href="https://it.linkedin.com/in/bergamohub001"target="_blank">Fabrizio Terzi</a></th>
                       <td>
                         <div class="progress no-margin">
-                          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                          <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"  aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                             <span class="sr-only">Progress</span>
                           </div><!-- /.progress-bar -->
                         </div><!-- /.progress -->
@@ -211,11 +211,11 @@
                     <tr>
                      <tr>
                       <td>4</td>
-                      <td>Peeragogy MOOC</td>
-                      <th><a href="http://socialmediacollege.com.es/moodle/"target="_blank">Julia Echeverria</a></th>
+                      <td>My Peeragogy App</td>
+                      <th><a href="#Under preparation"target="_blank">Open Class</a></th>
                       <td>
                         <div class="progress no-margin">
-                          <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 5%">
+                          <div class="progress-bar progress-bar-warning progress-bar-striped active " role="progressbar"  aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 23%">
                             <span class="sr-only">Progress</span>
                           </div><!-- /.progress-bar -->
                         </div><!-- /.progress -->
@@ -227,7 +227,7 @@
                       <th></th>
                       <td>
                         <div class="progress">
-                          <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 53%">
+                          <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="value" aria-valuemin="0" aria-valuemax="100" style="width: 57%">
                             <span class="sr-only">Progress</span>
                           </td>
                         </tr>
@@ -249,6 +249,7 @@
                 <li><a href="task.html" data-filter=".doc">Editorial</a></li>
                 <li><a href="task.html" data-filter=".des">Design</a></li>
                 <li><a href="task.html" data-filter=".ric">Research</a></li>
+                 <li><a href="task.html" data-filter=".mooc">MOOCs</a></li>
               </ul><!-- /#filters.tags -->
             </div><!-- /.col -->
           </div><!-- /.row -->
@@ -336,7 +337,7 @@
                   <i class="fa fa-fw fa-gift"></i> Open group<i class="fa fa-check-circle-o text-success pull-right"></i>
                 </div>
                 <div class="meta-row">
-                  <i class="fa fa-fw fa-bell"></i><a href="http://bit.ly/1SVr7XC"target="_blank"> Description </a> <i class="fa fa-check-circle-o text-danger pull-right"></i>
+                  <i class="fa fa-fw fa-envelope"></i><a href="https://groups.google.com/forum/#!forum/peeragogy-developers"target="_blank"> Mail Forum</a> <i class="fa fa-check-circle-o text-success pull-right"></i>
                 </div>
                  <div class="meta-row">
                   <i class="fa fa-fw fa-envelope"></i><a href="mailto:fabrizio.terzi@gmail.com"target="_blank"> Mail</a> <i class="fa fa-check-circle-o text-success pull-right"></i>
@@ -347,6 +348,48 @@
             </div><!-- /.col -->
           </div><!-- /.row -->
    <!-- ---------------------/.2 -->
+   <!-- ---------------------/3 -->
+ <div class="col-md-4 mooc">
+              <div class="widget border-default">
+                <div class="meta-cell bg-primary">
+                  <strong>@App MOOC</strong>
+                </div>
+                <div class="meta-cell bg-secondary no-border">
+                   Introductory level
+                </div>
+                <div class="meta-row">
+                  <img class="img-thumbnail drop-in-left" src="assets/img/classes/class-3.jpg" alt="img" width="75" height="75">
+                  <p>Learn to use the open development tool, App Inventor, to program on Android devices. </p>
+                </div>
+                <div class="meta-row">
+                <i class="fa fa-fw fa-users"></i> MOOC Training
+                 <div class="btn-group pull-right">
+                  <button type="button" class="btn btn-success dropdown-toggle btn-xs" data-toggle="dropdown">
+                  Join the Class <span class="caret"></span>
+                    </button>
+                 <ul class="dropdown-menu" role="menu">
+                 <li><a href="https://plus.google.com/u/0/+FabrizioTerzi"target="_blank">Fabrizio</a></li>
+                </ul>
+              </div>
+                </div>
+                <div class="meta-row">
+                  <i class="fa fa-fw fa-clock-o"></i> Length: 6 weeks
+                </div>
+                <div class="meta-row">
+                  <i class="fa fa-fw fa-tachometer"></i> Effort: 8 hours/week
+                </div>
+                <div class="meta-row">
+                  <i class="fa fa-fw fa-pencil"></i> Subject: Computer Science
+                </div>
+                 <div class="meta-row">
+                  <i class="fa fa-fw fa-tag"></i> Price: Free
+                </div>
+                <div class="meta-row bg-highlight">
+                <strong>Android training</strong>
+                </div>
+              </div><!-- /.col -->
+            </div><!-- /.row -->
+          </section>
    <!-- ---------------------/.3 -->
             <div class="col-md-4 ric">
               <div class="widget border-default">
@@ -389,13 +432,25 @@
               </div><!-- /.col -->
             </div><!-- /.row -->
           </section>
-<!-- ---------------------/.3 -->
+
+<!-- ---------------------/.4 -->
+
   </div><!-- /.dashboard-wrapper -->
 
   <!-- last but not least the javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="http://graphikaria.com/demo/theorem/v2.0.0/assets/js/jquery-1.11.1.min.js"><\/script>')</script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64479538-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
   <!-- Plugins -->
   <script src="assets/prism/prism.js"></script>
